tests/ui/higher-ranked/trait-bounds/hrtb-debruijn-in-receiver.stderr
error[E0499]: cannot borrow `foo` as mutable more than once at a time
  --> $DIR/hrtb-debruijn-in-receiver.rs:17:5
   |
LL |     foo.insert();
   |     --- first mutable borrow occurs here
LL |     foo.insert();
   |     ^^^
   |     |
   |     second mutable borrow occurs here
   |     first borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0499`.
